# pyqt5-calc

./: .gitignore  LICENSE  README.md  pyrightconfig.json  setup.cfg
pyqt5_calc/: __init__.py  __main__.py  calc.py  plugins_manager.py
pyqt5_calc/plugins/: example.py
