[metadata]
name = pyqt5-calc
version = 1.2.0
author = Archaic Lier
author_email = none@none.none
description = Helper
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    PyQt5>=5.15
    PyQt5-sip>=12.9
packages = pyqt5_calc
python_requires = >=3.5
