[metadata]
name = pyqt5-calc
version = 1.3.1
author = Archaic Lier
author_email = none@none.none
description = Helper
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    PyQt5>=5.15
    PyQt5-sip>=12.9
packages = 
    pyqt5_calc
    pyqt5_calc.plugins
python_requires = >=3.5
